--- a/Lab3/load_balancer.yml
+++ b/Lab3/load_balancer.yml
@@ -1,7 +1,8 @@
 ####################################
 ### LOAD BALANCER INSTALL SCRIPT ###
 ####################################
----
+#requires ansible.posix
+
 - name: Set Up Load Balancer
   hosts: loadbalancer
   remote_user: root
