--- a/Lab3/load_balancer.yml
+++ b/Lab3/load_balancer.yml
@@ -21,6 +21,7 @@
     ansible.posix.firewalld:
        service: http
        permanent: yes
+       immediate: yes
        state: enabled
   - name: Enable/Start nignx
     ansible.builtin.systemd:
