--- a/Lab3/uninstall_balancer.yml
+++ b/Lab3/uninstall_balancer.yml
@@ -1,7 +1,8 @@
 ######################################
 ### LOAD BALANCER UNINSTALL SCRIPT ###
 ######################################
----
+#requires ansible.posix
+
 - name: Set Up Load Balancer
   hosts: loadbalancer
   remote_user: root
@@ -14,3 +15,9 @@
     ansible.builtin.yum_repository:
       name: nginx
       state: absent
+  - name: close http port
+    ansible.posix.firewalld:
+       service: http
+       permanent: yes
+       immediate: yes
+       state: disabled
