added remote_user to setup infrastructure

--- a/Lab3/Ops/setup_infrastructure.yml
+++ b/Lab3/Ops/setup_infrastructure.yml
@@ -8,11 +8,12 @@
   tags:
    - balancer
    - webServer
+  remote_user: root
   hosts:
    - prod
    - balancer
   tasks:
-  
+
 - name: setup apache
   tags:
    - webServer
