--- a/Lab3/Ops/tasks/https.yml
+++ b/Lab3/Ops/tasks/https.yml
@@ -6,13 +6,15 @@
   ansible.builtin.yum:
     name: pyOpenSSL
     state: latest
-- name: openssl certificate files
+- name: generate openssl private key
   openssl_privatekey:
     path: /etc/ssl/private/calWeb.com.pem
+- name: generate openssl certificate request
   openssl_csr:
     path: /etc/ssl/cert/calWeb.com.csr
     privatekey_path: /etc/ssl/private/calWeb.com.pem
     common_name: www.calWeb.com
+- name: generate openssl certificate
   openssl_certificate:
     path: /etc/ssl/crt/calWeb.com.crt
     privatekey_path: /etc/ssl/private/calWeb.com.pem
