update https script 3

--- a/Lab3/Ops/tasks/https.yml
+++ b/Lab3/Ops/tasks/https.yml
@@ -2,9 +2,9 @@
   ansible.builtin.yum:
     name: openssl
     state: latest
-- name: instlly pyOpenSSL
+- name: install cryptography
   ansible.builtin.yum:
-    name: pyOpenSSL
+    name: cryptography
     state: latest
 - name: set up ssl directories
   ansible.builtin.file:
@@ -13,7 +13,7 @@
     mode: '0755'
 - name: generate openssl private key
   openssl_privatekey:
-    path: /etc/ssl/calWeb/calWeb.com.pem
+    path: /etc/ssl/calWeb/calweb.com.pem
 - name: generate openssl certificate request
   openssl_csr:
     path: /etc/ssl/calWeb/calWeb.com.csr
