--- a/Final_Project/Ops/destroy_portable_web_env.yml
+++ b/Final_Project/Ops/destroy_portable_web_env.yml
@@ -35,7 +35,7 @@
         path: /vpnconf
         state: absent
     # Delete Web Directory
-    - name: Delete OpenVPN-AS Configs
+    - name: Delete Web Directory
       ansible.builtin.file:
         path: /www
         state: absent
