--- a/Final_Project/Ops/deploy_portable_web_env.yml
+++ b/Final_Project/Ops/deploy_portable_web_env.yml
@@ -28,13 +28,12 @@
         name: "{{ item }}"
         state: present
       with_items:
+        - epel-release
         - docker-ce
         - docker-ce-cli
         - containerd.io
         - python
-        - pip
-        - virtualenv
-        - setuptools
+        - python-pip
     - name: Install Docker Python Package
       ansible.builtin.pip:
         name: docker
