--- a/Final_Project/Ops/deploy_portable_web_env.yml
+++ b/Final_Project/Ops/deploy_portable_web_env.yml
@@ -29,9 +29,7 @@
         state: present
       with_items:
         - epel-release
-        - docker-ce
-        - docker-ce-cli
-        - containerd.io
+        - docker
         - python
         - python-pip
     - name: Install Docker Python Package
