--- a/Final_Project/Ops/deploy_portable_web_env.yml
+++ b/Final_Project/Ops/deploy_portable_web_env.yml
@@ -86,9 +86,9 @@
           - 9443:9443
           - 1194:1194
         env:
-          PUID: 1000
-          PGID: 1000
-          TZ: America/New_York
+          PUID: "1000"
+          PGID: "1000"
+          TZ: "America/New_York"
         capabilities:
           - NET_ADMIN
         recreate: true
@@ -121,9 +121,9 @@
           - 9443:9443
           - 1194:1194
         env:
-          PUID: 1000
-          PGID: 1000
-          TZ: America/New_York
+          PUID: "1000"
+          PGID: "1000"
+          TZ: "America/New_York"
         capabilities:
           - NET_ADMIN
         recreate: true
