--- a/Final_Project/Ops/deploy_portable_web_env.yml
+++ b/Final_Project/Ops/deploy_portable_web_env.yml
@@ -104,11 +104,9 @@
         ansible_python_interpreter: /usr/bin/python3
     # Copy OpenVPN Config
     - name: Overwrite OpenVPN-AS Configs
-      ansible.builtin.copy:
+      ansible.posix.synchronize:
         src: vpnconf/
         dest: /vpnconf
-        mode: 0755
-        force: true
     - name: Recreate OpenVPN Container
       community.docker.docker_container:
         auto_remove: true
