--- a/Final_Project/Ops/deploy_portable_web_env.yml
+++ b/Final_Project/Ops/deploy_portable_web_env.yml
@@ -32,6 +32,7 @@
         - docker
         - python3
         - python3-pip
+        - rsync
     - name: Install Docker Python Package
       ansible.builtin.pip:
         name: docker
