Readjust SELinux to be Disabled through Shell

--- a/Final_Project/Ops/deploy_portable_web_env.yml
+++ b/Final_Project/Ops/deploy_portable_web_env.yml
@@ -38,8 +38,7 @@
         name: docker
         executable: pip3
     - name: Disable SELinux
-      ansible.posix.selinux:
-        state: disabled
+      ansible.builtin.shell: setenforce 0
     # Ensure Docker is Started and Starts on Boot
     - name: Start and Enable Docker
       ansible.builtin.systemd:
