--- a/Final_Project/Ops/destroy_portable_web_env.yml
+++ b/Final_Project/Ops/destroy_portable_web_env.yml
@@ -62,6 +62,8 @@
         - 445/udp
         - 8080/tcp
         - 8080/udp
+      vars:
+        ansible_python_interpreter: /usr/bin/python
     # Bring Firewall Changes into Effect
     - name: Reload Firewalld
       ansible.builtin.systemd:
